kasten/k10-generate-policy-by-preset-label/.kyverno-test/test-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    dataprotection: gold
